--- a/main.html
+++ b/main.html
@@ -14,6 +14,7 @@
 // Listen for messages
 const {ipcRenderer} = require('electron');
 ipcRenderer.on('message', function(event, text) {
+  console.log(">>>", text);
   var container = document.getElementById('messages');
   var message = document.createElement('div');
   message.innerHTML = text;
